# Gesture_Controlled_Robot

./: README.md
bot_bringup/launch/: simulated_robot.launch.py
bot_controller/: CMakeLists.txt  package.xml
bot_description/launch/: gazebo.launch.py
imu_visualizer/: package.xml  setup.py
imu_visualizer/firmware/micro_ros_imu/: I2C_Scanner.ino  MPU_6050_Gyro_Raw.ino  Telemery_Config_File.txt  micro_ros_imu.ino
imu_visualizer/imu_visualizer/: imu_controller.py  imu_smoother.py
imu_visualizer/launch/: imu_controller.launch.py  view_imu.launch.py
imu_visualizer/meshes/: drone.STL
imu_visualizer/rviz/: imu_config.rviz
imu_visualizer/urdf/: imu_cube.urdf
